aksyamls/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financeappbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financeappbackend
  template:
    metadata:
      labels:
        app: financeappbackend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: sc-account-03d177e8-3f3d-4009-86b9-c2c688575aef
      nodeSelector:
        agentpool: agentpool  # <-- This targets the specific node pool
      containers:
      - name: financeapp
        image: aksfinance.azurecr.io/backend:latest
---
apiVersion: v1
kind: Service 
metadata:
  name: financeappbackend-svc
spec:
  # type: LoadBalancer
  selector:
    app: financeappbackend
  ports: 
    - name: http
      port: 80
      targetPort: 3000
