aksyamls/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financeapp
  template:
    metadata:
      labels:
        app: financeapp
    spec:
      nodeSelector:
        agentpool: node1  # <-- This targets the specific node pool
      containers:
      - name: financeapp
        image: aksfinance.azurecr.io/frontend:latest
           
---
apiVersion: v1
kind: Service 
metadata:
  name: financeapp-svc
spec:
  type: LoadBalancer
  selector:
    app: financeapp
  ports: 
    - name: http
      port: 80
      targetPort: 5000
